--- a/Register.html
+++ b/Register.html
@@ -268,7 +268,7 @@
 			
 			
 			<!-- Center of the footer -->
-			<div id=centerFooter">
+			<div id="centerFooter">
 			
 				<h3><a href ="#">Privacy Policy</a></h3>
 				
