--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 			
 			
 			<!-- Center of the footer -->
-			<div id=centerFooter">
+			<div id="centerFooter">
 			
 				<h3><a href ="#">Privacy Policy</a></h3>
 				
