--- a/Register.html
+++ b/Register.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 	<title>Register</title>
+	<script type="text/javascript" src="function.js"></script>
 	</head>
 	
 	<!--CSS -->
@@ -93,12 +94,13 @@
 	
 	
 	<!-- Top banner -->
-		<div id = "banner">
+		<div id = "banner"></div>
+		<script>
+			createBanner();
+		</script>
 		
 		
-			<h1>Banner Information</h1>
-		</div>
-		
+	<!--Image-->	
 		<div id = "logo">
 		
 			<img src ="foodarIMG.png" alt ="logo">
