--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
 
 	<head>
 		<title>About Foodar</title>
+		<script type="text/javascript" src="function.js"></script>
 	</head>
 	
 	
@@ -78,15 +79,13 @@
 	
 	<body>
 	
-	<!-- Top banner -->
-		<div id = "banner">
+		<!-- Top banner -->
+		<div id = "banner"></div>
+		<script>
+			createBanner();
+		</script>
 		
-			<h1>Banner Information</h1>
-			
-		</div>
-		
-		
-		
+		<!--Image-->		
 		<div id = "logo">
 		
 			<img src ="foodarIMG.png" alt ="logo">
