--- a/Register.html
+++ b/Register.html
@@ -2,23 +2,21 @@
 <html>
 	<head>
 	<title>Register</title>
-	<link rel="stylesheet" type="text/css" href="foodar.css">
+	<link rel="stylesheet" type="text/css" href="foodar.css"/>
 	<script type="text/javascript" src="function.js"></script>
 	</head>
 	
 	
 	
-	<body onload="createBanner()">
+	<body>
 	
 	<div id="wrapper">
-	
-	<!-- Top banner -->
-		<div id = "banner"></div>
+		
 		
 	<!--Image-->	
 		<div id = "logo">
 		
-			<img src ="foodarIMG.png" alt ="logo">
+			<img src ="foodarIMG.png" alt ="logo"/>
 			
 		</div>
 		
@@ -179,8 +177,8 @@
 			<!--Column One-->
 			<tr>
 				<td><a href="index.html">Home</a></td>
-				<td><a href="#">Privacy Policy</a><td>
-				<td>Enjoy!<td>
+				<td><a href="#">Privacy Policy</a></td>
+				<td>Enjoy!</td>
 			</tr>
 			
 			<!--Column Two-->
