--- a/about.html
+++ b/about.html
@@ -4,23 +4,20 @@
 
 	<head>
 		<title>About Foodar</title>
-		<link rel="stylesheet" type="text/css" href="foodar.css">
+		<link rel="stylesheet" type="text/css" href="foodar.css"/>
 		<script type="text/javascript" src="function.js"></script>
 	</head>
 	
 
 	
 	
-	<body onload="createBanner()">
+	<body>
 	<div id="wrapper">
-		<!-- Top banner -->
-		<div id = "banner"></div>
-		
 		
 		<!--Image-->		
 		<div id = "logo">
 		
-			<img src ="foodarIMG.png" alt ="logo">
+			<img src ="foodarIMG.png" alt ="logo"/>
 			
 		</div>
 		
@@ -81,8 +78,8 @@
 		<table style="width:100%">
 			<tr>
 				<td><a href="index.html">Home</a></td>
-				<td><a href="#">Privacy Policy</a><td>
-				<td>Enjoy!<td>
+				<td><a href="#">Privacy Policy</a></td>
+				<td>Enjoy!</td>
 			</tr>
 			<tr>
 				<td><a href="about.html">How It Works</a></td>
