--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			
 			
 				
-				<form>
+				<form action = "request.html" method="post">
 					<input type="text" placeholder="Zip Code" pattern ="[0-9]{5}" name="zip" required />
 					
 					<button id="checker">Go!</button>
