--- a/request.html
+++ b/request.html
@@ -110,7 +110,7 @@
 			</br></br></br>
 			
 			
-			<div id="total"></div>
+			<h3 id="total"></h3>
 			
 			
 			<button type="submit">REQUEST</button>
